FIX: Amount displaying my account right aligned

--- a/src/App.scss
+++ b/src/App.scss
@@ -130,6 +130,9 @@ $background-color_3: #00043a;
     transform: scale(1.05) !important;
   }
 }
+.text-align-right {
+  text-align: right;
+}
 .navbar,
 footer {
   a {
